0024279: bug in Standard_Boolean STEPCAFControl_Reader::Transfer